--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -219,26 +219,52 @@ main {
   color: var(--secondary);
 }
 
+footer {
+  padding: 15px 6% 15px 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
+  background-color: var(--light);
+  box-shadow: 0 5px 35px rgba(146, 204, 206, 0.4);
+}
+
+footer h2 {
+  color: var(--tertiary);
+  background-color: var(--light);
+  padding: 5px 1% 5px 6%;
+  margin: 0;
+  font-size: 0.5vw;
+  line-height: 1;
+}
+
 /* portfolio project images */
 /* TODO: Add portfolio project images here using background images*/
 .run-buddy {
-  background-image: url('../assets/images/run-buddy-1.png');
+  background: url("../images/run-buddy-1.png");
+  background-size: 100%;
 }
 
 .led-wall {
-  background-image: url('../assets/images/led-wall-1.png');
+  background: url("../images/led-wall-1.png");
+  background-size: 100%;
+
 }
 
 .react-calc {
-  background-image: url('../assets/images/calculator-1.png');
+  background: url("../images/calculator-1.png");
+  background-size: 100%;
 }
 
 .pastel-puzzles {
-  background-image: url('../assets/images/puzzle-1.png');
+  background: url("../images/puzzle-1.png");
+  background-size: 100%;
 }
 
 .surf-report {
-  background-image: url('../assets/images/surf-report-1.png');
+  background: url("../images/surf-report-1.png");
+  background-repeat: no-repeat;
 }
 
 /* media queries */
